ingress-1.21.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.polo.zeppel.in.ua
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port: 
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.polo.zeppel.in.ua
    secretName: ingress-nginx-secret-tls
